<resources>
    <string name="app_name">YES Pustak</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="DeleteNote">Are you Sure?</string>
    <string name="title_activity_display_note2">DisplayNote2</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="app_notification">App Notification</string>
    <string name="open_my_pustakalay_on_start">Open My Pustakalay On Start</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="faq">FAQ</string>
    <string name="check_for_update">Check For Update</string>
    <string name="app_theme_color">App Theme Color</string>
    <string name="help_and_support">Help and Support</string>
    <string name="feedback">Feedback</string>
    <string name="title_name_asterisk">Name *</string>
    <string name="title_password_asterisk">Password *</string>
    <string name="title_email_asterisk">Email *</string>
    <string name="title_confirm_password_asterisk">Confirm password *</string>
    <string name="title_date_of_birth_asterisk">Date of Birth *</string>
    <string name="title_mobile_number_asterisk">Mobile Number *</string>
    <string name="title_verifying">Verifying %s</string>
    <string name="title_next_arrow"><![CDATA[Next >]]></string>
    <string name="title_verify">Verify</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_confirm_password">Confirm password</string>
    <string name="title_password">Password</string>
    <string name="title_email">Email</string>
    <string name="title_name">Name</string>
    <string name="title_date_of_birth">Date of Birth</string>
    <string name="title_mobile_number">Mobile Number</string>
    <string name="title_mobile">Mobile</string>
    <string name="title_whatsapp_number">Whatsapp Number</string>
    <string name="title_username">Username</string>
    <string name="title_forgot_password_que_mark">Forgot Password?</string>
    <string name="title_sign_in">Sign in</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="title_resend_otp">Resend OTP</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="title_or">OR</string>
    <string name="title_submit">Submit</string>
    <string name="msg_field_required">%s is required.</string>
    <string name="msg_field_invalid">Invalid %s.</string>
    <string name="msg_field_min_limit">%s must be at least %d characters in length.</string>
    <string name="msg_field_min_limit_6">%s must be at least 6 characters in length.</string>
    <string name="msg_field_max_limit_10">%s can not exceed 10 characters in length.</string>
    <string name="msg_field_max_limit_60">%s can not exceed 60 characters in length.</string>
    <string name="msg_field_max_limit_256">%s can not exceed 256 characters in length.</string>
    <string name="msg_at_lease_one_field_required">At lease 1 field required</string>
    <string name="msg_otp_wait_mobile">Please wait, while we verify the OTP sent on +91 %s</string>
    <string name="msg_otp_wait_email">Please enter the OTP sent on %s</string>
    <string name="msg_enter_moble_or_email">Please enter your Mobile number. or Email so we can send you an OTP to reset your password.</string>
    <string name="text_enter_pass">Enter new password for %s</string>
    <string name="text_welcome_to_yes_pustak">Welcome to YES Pustak</string>
    <string name="text_sign_in_to_yes_pustak">Sign in to YES Pustak</string>
    <string name="text_same_as_mobile_number">Same as mobile number</string>
    <string name="text_don_t_have_an_account_que_mark">Don\'t have an account?</string>
    <string name="text_resend_otp_text">Resend OTP in %02d:%02d</string>
    <string name="text_already_have_acc_que_mark">Already have an account?</string>
    <string name="text_enter_otp">Please enter OTP</string>
    <string name="text_really_want_to_cancel">Do you really want to cancel this process</string>
    <string name="text_really_want_to_delete_all">Do you really want to delete all %s</string>
    <string name="text_pass_not_match">Password did not match</string>
    <string name="text_continue_with_academics">Continue with your Academics</string>
    <string name="title_no">No</string>
    <string name="title_yes">Yes</string>
    <string name="text_are_you_sure">Are you Sure?</string>
    <string name="text_success_exclamation">Success!</string>
    <string name="text_failed_exclamation">Failed!</string>
    <string name="title_loading">Loading</string>
    <string name="text_select_board">Please select your board</string>
    <string name="text_select_school">Please select your school</string>
    <string name="text_select_section">Please select your section (optional)</string>
    <string name="text_select_academic_yr">Please select your Academic year</string>
    <string name="title_all">All</string>
    <string name="text_select_standard">Please select your standard</string>
    <string name="msg_something_went_wrong">Something went wrong</string>
    <string name="msg_device_already_registered">This device is already registered</string>
    <string name="text_device_offline">Your device is offline. Please check your internet connection</string>
    <string name="text_error_while_fetching">Error while fetching information</string>
    <string name="title_terms_and_conditions"><![CDATA[Terms & Conditions Of Use]]></string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="text_price_with_rs_sign">₹ %.2f</string>
    <string name="title_delete">Delete</string>
    <string name="title_add_to_cart">Add to Cart</string>
    <string name="text_already_exist_in_cart">Already exist in Cart</string>
    <string name="text_add_to_cart">Add to cart</string>
    <string name="text_isbn"><![CDATA[<b>ISBN: </b> %s]]></string>
    <string name="text_author"><![CDATA[<b> Author: </b> %s]]></string>
    <string name="text_publication"><![CDATA[<b> Publication: </b> %s]]></string>
    <string name="text_Subject"><![CDATA[<b> Subject: </b> %s]]></string>
    <string name="text_no_of_pages"><![CDATA[<b> Number of Pages: </b> %s]]></string>
    <string name="text_class"><![CDATA[<b> Class: </b> %s]]></string>
    <string name="text_board"><![CDATA[<b> Board: </b> %s]]></string>
    <string name="text_mrp_colon">MRP :</string>
    <string name="text_mrp">MRP: ₹ %.2f</string>
    <string name="text_ypp">YPP: ₹ %.2f</string>
    <string name="text_action_bar_title">YES Pustak | %s</string>
    <string name="text_by_publication_name">By %s</string>
    <string name="title_done">Done</string>
    <string name="text_payment_fail_description">Your payment cannot be processed.</string>
    <string name="text_payment_success_description">Your payment is complete.</string>
    <string name="title_failed">Failed</string>
    <string name="title_success">Success</string>
    <string name="text_cart_is_empty">Your cart is empty</string>
    <string name="text_cart_empty_subtext">but it doesn\'t have to be</string>
    <string name="title_shop_now">Shop Now</string>
    <string name="text_total_amount_saved">Total Amount Saved:</string>
    <string name="title_checkout">Checkout</string>
    <string name="pause">PAUSE</string>
    <string name="resume">RESUME</string>
    <string name="download">Download</string>
    <string name="permission_not_enabled">Please enable the Write External Storage Permission</string>
    <string name="delete_files">Delete Downloads test files from the file system and try again.</string>
    <string name="delete_title">Are you sure you want to delete %1$s?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="view">VIEW</string>
    <string name="wifiOnly">WiFi Only</string>
    <string name="retry">RETRY</string>
    <string name="start">Start</string>
    <string name="complete_over">%1$d/%2$d</string>
    <string name="start_fetching">Click start to start fetching game files.</string>
    <string name="fetch_started">Fetching Game Files…</string>
    <string name="fetch_done">Fetching done.</string>
    <string name="fetch_failed">An error occurred whiles fetching the game files.</string>
    <string name="reset">RESET</string>
    <string name="single_download_demo">Single Download Demo</string>
    <string name="download_list_demo">Download List Demo</string>
    <string name="game_file_download_demo">Game File Download Demo</string>
    <string name="percent_progress">%1$d%%</string>
    <string name="downloading">downloading…</string>
    <string name="queued">QUEUED</string>
    <string name="added">ADDED</string>
    <string name="status_unknown">Status Unknown</string>
    <string name="delete_all_files">Delete Downloaded Files</string>
    <string name="file_server">FETCH FILE SERVER DEMO</string>
    <string name="downloaded_files_deleted">Downloads Files Deleted</string>
    <string name="game_download_error">An error occurred, could not get game files.</string>
    <string name="failed_multi_enqueue">Failed Multi Enqueue Demo</string>
    <string name="multi_fragment">MULTI FRAGMENT DEMO</string>
    <string name="enqueue_error">Could not enqueue this request. Check logcat.</string>
    <string name="download_eta_sec">%1$ds left</string>
    <string name="download_eta_min">%1$dm %2$ds left</string>
    <string name="download_eta_hrs">%1$dh %2$dm %3$ds left</string>
    <string name="download_speed_bytes">%1$d B/s</string>
    <string name="download_speed_kb">%1$s KB/s</string>
    <string name="download_speed_mb">%1$s MB/s</string>
    <string name="download_size_bytes">%1$d B</string>
    <string name="download_size_kb">%1$s KB</string>
    <string name="download_size_mb">%1$s MB</string>
    <string name="text_progress_percentage">%d%%</string>
    <string name="text_already_purchased">Already Downloaded</string>
    <string name="title_save">Save</string>
    <string name="title_school">School</string>
    <string name="title_class">Class</string>
    <string name="title_section">Section</string>
    <string name="text_order_id">Order ID :</string>
    <string name="title_reason">Reason :</string>
    <string name="text_request_fail">Request fail</string>
    <string name="text_saved_price_with_rs_sign">- ₹ %.2f</string>
    <string name="text_total_mrp_amount">Total MRP Amount:</string>
    <string name="text_na">NA</string>
    <string name="text_total_ypp_amount">Total YPP Amount:</string>
    <string name="text_i_agree_wih_your">I agree with your</string>
    <string name="text_terms_and_conditions">Terms and Conditions</string>
    <string name="text_and">and</string>
    <string name="text_privacy_policy">Privacy Policy</string>
    <string name="text_open_cart">Open cart</string>
    <string name="title_search">Search</string>
    <string name="title_delete_all">Delete all %s</string>
    <string name="title_create_note">Create Note</string>
    <string name="title_edit_note">Edit Note</string>
    <string name="text_search_in_dictionary">Search in Dictionary</string>
    <string name="title_translate">Translate</string>
    <string name="title_underline">Underline</string>
    <string name="title_strikeout">Strikeout</string>
    <string name="title_squiggle">Squiggle</string>
</resources>