<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    tools:context=".fragments.ForgotPasswordFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/title_forgot_password"
            android:textSize="22sp"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/otp_wait_msg_tv"
            android:text="@string/msg_enter_moble_or_email"
            android:layout_marginTop="16dp"
            android:textSize="22sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_mobile_no"
                android:drawableStart="@drawable/ic_baseline_smartphone_24"
                android:inputType="number"
                android:maxLength="10"
                android:drawablePadding="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_mobile_number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:text="@string/title_or"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textStyle="italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:inputType="textEmailAddress"
                android:maxLength="256"
                android:drawablePadding="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_field_required"
            android:text="@string/msg_at_lease_one_field_required"
            android:visibility="gone"
            android:textColor="@android:color/holo_red_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:text="@string/title_submit"
            android:id="@+id/btn_submit"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/btn_gradient_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/text_already_have_acc_que_mark"
            android:layout_marginTop="32dp"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/title_sign_in"
            android:id="@+id/tv_sign_in"
            android:textSize="22sp"
            android:gravity="center_horizontal"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</FrameLayout>