<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/logo"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item
        android:id="@+id/mi_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:visible="true"
        android:orderInCategory="100"
        android:iconifiedByDefault="true"
        android:title="@string/title_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always"/>


    <item
        android:id="@+id/mi_cart"
        android:icon="@drawable/ic_outline_shopping_cart_24"
        android:visible="true"
        android:orderInCategory="100"
        android:title="@string/text_open_cart"
        app:showAsAction="ifRoom"/>

</menu>