<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    tools:context=".fragments.PersonalDetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/text_welcome_to_yes_pustak"
                android:textColor="@android:color/black"
                android:layout_marginBottom="16dp"
                android:textSize="22sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginBottom="12dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="4dp"
                    android:drawableTint="@android:color/darker_gray"
                    android:maxLength="60"
                    android:inputType="textPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_name_asterisk" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:background="@drawable/rounded_border"
                android:layout_marginBottom="14dp"
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <ImageView
                    android:src="@drawable/ic_gender"
                    app:tint="@android:color/black"
                    android:paddingTop="4dp"
                    android:paddingStart="2dp"
                    android:layout_gravity="center_vertical"
                    android:scaleType="fitCenter"
                    android:layout_width="37dp"
                    android:layout_height="37dp"/>

                <Spinner
                    android:id="@+id/spnr_gender"
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:entries="@array/gender" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="4dp"
                    android:drawableTint="@android:color/darker_gray"
                    android:maxLength="128"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_email_asterisk" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginBottom="8dp"
                app:passwordToggleEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="4dp"
                    android:drawableTint="@android:color/darker_gray"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_password_asterisk" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginBottom="8dp"
                app:passwordToggleEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_confirm_password"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="4dp"
                    android:drawableTint="@android:color/darker_gray"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_confirm_password_asterisk" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!-- Use date picker -->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_dob"
                    android:inputType="date"
                    android:cursorVisible="true"
                    android:clickable="true"
                    android:focusable="false"
                    android:drawableStart="@drawable/ic_baseline_calendar_today_24"
                    android:drawablePadding="4dp"
                    android:drawableTint="@android:color/darker_gray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_date_of_birth_asterisk" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_mobile_no"
                    android:drawableStart="@drawable/ic_baseline_smartphone_24"
                    android:drawablePadding="4dp"
                    android:drawableTint="@android:color/darker_gray"
                    android:maxLength="10"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_mobile_number_asterisk" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_whatsapp_no"
                    android:drawableStart="@drawable/ic_whatsapp"
                    android:drawablePadding="4dp"
                    android:maxLength="10"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_whatsapp_number" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cb_same_as_mobile_no"
                    android:text="@string/text_same_as_mobile_number"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cb_agree"
                    android:text="@string/text_i_agree_wih_your"
                    android:layout_marginEnd="4dp"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tv_tnc"
                    android:text="@string/text_terms_and_conditions"
                    android:layout_marginEnd="4dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/text_and"
                    android:textColor="@android:color/black"
                    android:layout_marginEnd="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tv_privacy_policy"
                    android:text="@string/text_privacy_policy"
                    android:clickable="true"
                    android:focusable="true"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_next"
                android:text="@string/title_next_arrow"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/btn_bg_style"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

    </ScrollView>
</FrameLayout>